add_fltk_executable(hello_fltk hello_fltk.cpp)
add_gui_executable(draw_triangle draw_triangle.cpp)
add_gui_executable(shape_primitives shape_primitives.cpp)
add_library(exec12_graph exec12_graph.cpp)
target_link_libraries(exec12_graph GUI)
add_gui_executable(exec12-1 exec12-1.cpp)
add_gui_executable(exec12-2 exec12-2.cpp)
add_gui_executable(exec12-3 exec12-3.cpp)
add_gui_executable(exec12-4 exec12-4.cpp)
add_gui_executable(exec12-7 exec12-7.cpp)
add_gui_executable(exec12-8 exec12-8.cpp)
add_gui_executable(exec12-11 exec12-11.cpp)
add_gui_executable(exec12-12 exec12-12.cpp)
foreach(i IN ITEMS 8;11;12)
  target_link_libraries(exec12-${i} exec12_graph)
endforeach()
