add_gui_executable(draw_two_lines draw_two_lines.cpp)
add_gui_executable(draw_two_lines2 draw_two_lines2.cpp)
add_gui_executable(draw_grid draw_grid.cpp)
add_gui_executable(draw_open_polyline draw_open_polyline.cpp)
add_gui_executable(draw_closed_polyline draw_closed_polyline.cpp)
add_gui_executable(draw_polygon draw_polygon.cpp)
add_gui_executable(draw_rectangles draw_rectangles.cpp)
add_gui_executable(draw_color_matrix draw_color_matrix.cpp)
add_gui_executable(draw_circles draw_circles.cpp)
add_gui_executable(draw_ellipses draw_ellipses.cpp)
add_gui_executable(draw_marked_polyline draw_marked_polyline.cpp)
add_gui_executable(draw_marks draw_marks.cpp)
add_gui_executable(draw_images draw_images.cpp)
add_gui_executable(magic_tower magic_tower.cpp)
add_library(exec13_graph exec13_graph.cpp)
target_link_libraries(exec13_graph GUI)
target_link_libraries(exec13_graph exec12_graph)
add_gui_executable(exec13-1 exec13-1.cpp)
target_link_libraries(exec13-1 exec13_graph)
add_gui_executable(exec13-2 exec13-2.cpp)
target_link_libraries(exec13-2 exec13_graph)
add_gui_executable(exec13-3 exec13-3.cpp)
target_link_libraries(exec13-3 exec13_graph)
add_gui_executable(exec13-4 exec13-4.cpp)
target_link_libraries(exec13-4 exec13_graph)
add_gui_executable(exec13-5 exec13-5.cpp)
target_link_libraries(exec13-5 exec13_graph)
add_gui_executable(exec13-6 exec13-6.cpp)
target_link_libraries(exec13-6 exec13_graph)
add_gui_executable(exec13-9 exec13-9.cpp)
target_link_libraries(exec13-9 exec13_graph)
add_gui_executable(exec13-11 exec13-11.cpp)
target_link_libraries(exec13-11 exec13_graph)
add_gui_executable(exec13-12 exec13-12.cpp)
target_link_libraries(exec13-12 exec13_graph)
