add_gui_executable(draw_two_lines draw_two_lines.cpp)
add_gui_executable(draw_two_lines2 draw_two_lines2.cpp)
add_gui_executable(draw_grid draw_grid.cpp)
add_gui_executable(draw_open_polyline draw_open_polyline.cpp)
add_gui_executable(draw_closed_polyline draw_closed_polyline.cpp)
add_gui_executable(draw_polygon draw_polygon.cpp)
add_gui_executable(draw_rectangles draw_rectangles.cpp)
add_gui_executable(draw_color_matrix draw_color_matrix.cpp)
add_gui_executable(draw_circles draw_circles.cpp)
add_gui_executable(draw_ellipses draw_ellipses.cpp)
add_gui_executable(draw_marked_polyline draw_marked_polyline.cpp)
add_gui_executable(draw_marks draw_marks.cpp)
add_gui_executable(draw_images draw_images.cpp)
add_gui_executable(magic_tower magic_tower.cpp)
add_library(exec13_graph exec13_graph.cpp)
target_link_libraries(exec13_graph GUI exec12_graph)
foreach(i IN ITEMS 1;2;3;4;5;6;9;11;12)
  add_gui_executable(exec13-${i} exec13-${i}.cpp)
  target_link_libraries(exec13-${i} exec13_graph)
endforeach()
