add_library(lines_window lines_window.cpp)
target_link_libraries(lines_window GUI)
add_gui_executable(draw_lines draw_lines.cpp)
target_link_libraries(draw_lines lines_window)
add_gui_executable(exec16-3 exec16-3.cpp)
add_gui_executable(exec16-4 exec16-4.cpp)
target_link_libraries(exec16-4 exec12_graph)
add_fltk_executable(exec16-6 exec16-6.cpp)
add_gui_executable(exec16-9 exec16-9.cpp)
target_link_libraries(exec16-9 calculator_v2_lexer calculator_v2_parser)
add_gui_executable(exec16-10 exec16-10.cpp)
target_link_libraries(exec16-10 exec15_graph)
