add_library(calculator_v1_lexer lexer.cpp)
add_library(calculator_v1_parser parser.cpp)
target_link_libraries(calculator_v1_parser PUBLIC calculator_v1_lexer)
add_executable(calculator_v1 main.cpp)
target_link_libraries(calculator_v1 calculator_v1_lexer calculator_v1_parser)

add_gtest(NAME calculator_v1_lexer_test SOURCE lexer_test.cpp LIBRARY calculator_v1_lexer)
add_gtest(NAME calculator_v1_parser_test SOURCE parser_test.cpp LIBRARY calculator_v1_parser)
