add_library(calculator_v2_variable variable.cpp)
add_library(calculator_v2_lexer lexer.cpp)
target_link_libraries(calculator_v2_lexer PUBLIC calculator_v2_variable)
add_library(calculator_v2_parser parser.cpp)
target_link_libraries(calculator_v2_parser PUBLIC calculator_v2_lexer)
add_executable(calculator_v2 main.cpp)
target_link_libraries(calculator_v2 calculator_v2_lexer calculator_v2_parser)

add_gtest(NAME calculator_v2_variable_test SOURCE variable_test.cpp LIBRARY calculator_v2_variable)
add_gtest(NAME calculator_v2_lexer_test SOURCE lexer_test.cpp LIBRARY calculator_v2_lexer)
add_gtest(NAME calculator_v2_parser_test SOURCE parser_test.cpp LIBRARY calculator_v2_parser)
